--- a/1.html
+++ b/1.html
@@ -3,19 +3,26 @@
 <head>
   <title>WEB1 - HTML</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
-  <ol>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html">JavaScript</a></li>
-  </ol>
-  <h2>HTML</h2>
-  <p> <a href="https://www.w3.org/TR/2011/WD-html5-20110405/"
-    target="_blank" title="html5 specification">HyperText Markup Language</a>
-    is the standard markup language for documents designed <strong>to be displayed in a <u>web</u> browser.</strong> It can be assisted by technologies such as Cascading Style Sheets (CSS) and scripting languages such as JavaScript.<br>
-    Web browsers receive HTML documents from a web server or from local storage and render the documents into multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for the appearance of the document. </p>
-    <img src="forest load.jpg" width="100%">
+  <div id="grid">
+    <ol>
+      <li><a href="1.html">HTML</a></li>
+      <li><a href="2.html">CSS</a></li>
+      <li><a href="3.html">JavaScript</a></li>
+      <li><a href="checkbox.html">checkbox</a></li>
+    </ol>
+    <div id="article">
+      <h2>HTML</h2>
+      <p> <a href="https://www.w3.org/TR/2011/WD-html5-20110405/"
+        target="_blank" title="html5 specification">HyperText Markup  Language</a>
+        is the standard markup language for documents designed <strong>to   be displayed in a <u>web</u> browser.</strong> It can be assisted   by technologies such as Cascading Style Sheets (CSS) and scripting  languages such as JavaScript.<br>
+        Web browsers receive HTML documents from a web server or from local   storage and render the documents into multimedia web pages. HTML  describes the structure of a web page semantically and originally   included cues for the appearance of the document.
+      </p>
+      <img src="forest load.jpg" width="100%">
+    </div>
+  </div>
 </body>
 </html>
